# rusted-moog

./: Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
crates/voog/: Cargo.toml  index.html
crates/voog-dsp/: Cargo.toml
crates/voog-dsp/src/: arpeggiator.rs  channel.rs  config.rs  effects.rs  envelope.rs  event.rs  filter.rs  glide.rs  lfo.rs  lib.rs  noise.rs  oscillator.rs  params.rs  patches.rs  synth.rs  voice.rs  voice_allocator.rs  wavetables.rs
crates/voog/src/: audio.rs  gui.rs  lib.rs  main.rs  midi.rs  shared.rs
docs/: index.html
docs/app/: index.html  voog-126963cd2e4a5b04_bg.wasm  voog-22087c440831c17_bg.wasm  voog-6af90a411da8efce.js  voog-6af90a411da8efce_bg.wasm  voog-8d9d95b2f6483fc5.js  voog-8d9d95b2f6483fc5_bg.wasm  voog-c9c9dffad99d214e.js  voog-c9c9dffad99d214e_bg.wasm  voog-e501b329c52578dd_bg.wasm
