[package]
name = "voog"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "voog"
path = "src/main.rs"

[dependencies]
voog-dsp = { path = "../voog-dsp" }
cpal = "0.15"
midir = "0.10"
crossbeam-channel = "0.5"
eframe = "0.29"
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
